--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "engines":{
-    "node" : "10.7.0",
-    "npm" : "6.3.0"
-  },
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start" : "node index.js"
+    "start": "node index.js",
+    "test": "mocha index-spec.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vivek-faldu/HerokuDeploymentTest.git"
+  "engines": {
+    "node": "10.7.0",
+    "npm": "6.3.0"
   },
-  "author": "vivek",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/vivek-faldu/HerokuDeploymentTest/issues"
-  },
-  "homepage": "https://github.com/vivek-faldu/HerokuDeploymentTest#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "bluebird": "^3.5.2",
+    "chai": "^4.2.0",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
+    "express": "~4.16.0",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.3.0",
+    "mocha": "^5.2.0",
+    "mongoose": "^5.2.15",
+    "mongoose-paginate": "^5.0.3",
+    "morgan": "~1.9.0",
+    "nodemon": "^1.18.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-watch": "^2.0.7"
   }
 }
